# lotto-analysis

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  pyproject.toml
docs/: DECISIONS.md  NEXTJS_OPERATIONS.md  PROJECT_SPEC.md  USER_CHECKLIST.md
docs/reviews/: 2026-07-15-stage-1-collection.md  2026-07-17-advanced-analysis.md  2026-07-18-fastapi.md  2026-07-20-nextjs.md  README.md
frontend/: .env.local.example  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: analysis-nav.tsx  backtest-experiment-form.tsx  backtest-form.tsx  backtest-mode-nav.tsx  draw-numbers.tsx  generation-form.tsx  lotto-ball.tsx  matrix-mode-nav.tsx  site-footer.tsx  site-header.tsx
frontend/e2e/: core.spec.ts
frontend/lib/: api.ts  form-state.ts  server-logger.ts  types.ts
migrations/: env.py
src/lotto_analysis/: __init__.py  cli.py  (+2 more)
streamlit_app/: __init__.py  app.py
tests/: test_analysis_json.py  test_analysis_service.py  test_api.py  test_api_dependencies.py  test_backtest_service.py  test_basic_analysis.py  test_cli.py  test_collection_history.py  test_collection_service.py  test_collector.py  test_config.py  test_csv_draw_repository.py  test_dashboard_service.py  test_database_service.py  test_dhlottery_collector.py  test_draw.py  test_gap_analysis.py  test_generation.py  test_logging_config.py  test_matrix_analysis.py  test_pattern_analysis.py  test_period_comparison.py  test_processing_service.py  test_raw_draw_processor.py  test_raw_json_store.py  test_relationship_analysis.py  test_similarity_analysis.py  test_streamlit_views.py
(+106 files in other folders)
