[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lotto-analysis"
version = "0.1.0"
description = "Korean Lotto 6/45 data collection and analysis project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.14,<2",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.0,<2",
    "requests>=2.28,<3",
    "SQLAlchemy>=2.0,<3",
    "urllib3>=1.26.18,<2",
]

[project.scripts]
lotto-analysis = "lotto_analysis.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "external: tests that call an external service and are skipped by default",
    "postgres: tests that require the local PostgreSQL container",
]
